# Normaliz

./: README.md
source/: CMakeLists.txt
source/minkowski/: CMakeLists.txt  minkowski.cpp
